fix: third party component display issue
issue: [font-size: 10vw] causes the font-size of third party component too large, therefore I change the rem unit to vw to fix this issue.

--- a/src/styles/default.scss
+++ b/src/styles/default.scss
@@ -11,7 +11,6 @@
   margin: 0;
   padding: 0;
   font:inherit;
-  font-size: 10vw; /* default font size*/
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
